# BrainAI-BioAI

./: .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_INT.md  CONTRIBUTING.md  CONTRIBUTING_INT.md  LICENSE.md  LICENSE_INT.md  README.md  README_INT.md  SECURITY.md  SECURITY_INT.md
.github/ISSUE_TEMPLATE/: bug_report.md
DOCS/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_SOLAR.md  BuyOut.md  CODEBOOK.md  CSHARP_WRAPPER.md  FEATURES_EXPLAINED.md  INTEGRATION_BENCHMARK.md  INTEGRATION_HANDBOOK.md  Roadmap.md  SIMPLE_EXPLAINER.md  TRAININGS_GUIDE.md  VALUE_PROPOSITION.md
DOCS/INT/: API_REFERENCE_INT.md  ARCHITECTURE_INT.md  BENCHMARK_SOLAR_INT.md  BuyOut_INT.md  CSHARP_WRAPPER_INT.md  FEATURES_EXPLAINED_INT.md  INTEGRATION_HANDBOOK_INT.md  ROADMAP_INT.md  SIMPLE_EXPLAINER_INT.md  TRAININGS_GUIDE_INT.md  VALUE_PROPOSITION_INT.md
DOCS/Integrations/: OPCUA.md  ROS2.md  SAP.md
DOCS/Wrapper/: JavaScript.md  Python.md  c#.md  c++.md  java.md  vb.md
ProKey/: ProKey.c  ProKey.h  ProKey_Test.c  README.md  README_SDK.md  Readme.md  makefile
docs/Ger/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_SOLAR.md  BuyOut.md  CODEBOOK.md  CSHARP_WRAPPER.md  FEATURES_EXPLAINED.md  INTEGRATION_HANDBOOK.md  Roadmap.md  SIMPLE_EXPLAINER.md  TRAININGS_GUIDE.md  VALUE_PROPOSITION.md
docs/Int/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARK_SOLAR.md  BuyOut.md  CSHARP_WRAPPER.md  ROADMAP.md  (+4 more)
images/: README.md  README_INT.md
libs/: README.md
screens/: README.md  README_INT.md
src/: README.md
src/integrations/ROS2/: CMakeLists.txt  README.md  package.xml
src/integrations/ROS2/include/: BioAI_Config.h  BioAI_Interface.h  BioAI_Structs.h
src/integrations/ROS2/src/: bioai_ros2_node.cpp
(+122 files in other folders)
