<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>bioai_ros2</name>
	<version>0.7.6</version>
	<description>
		ROS 2 Wrapper-Knoten für die BioAI Sparse Associative Memory (SAM) Engine.
		Ermöglicht die neuro-symbolische Verarbeitung von TokenIDs innerhalb des ROS 2 Ökosystems.
	</description>

	<maintainer email="koehne83@googlemail.com">Sascha A. Koehne (winemp83)</maintainer>
	<license>Industrial Closed Feature / Proprietär</license>
	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>